testdata/invalidwiki/page 4/__page.opt
[General]
type = text
datetime = 2017-02-28 13:53:27.965896

